layouting the design

--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Titillium+Web:wght@400;600&display=swap" rel="stylesheet">
+
   <title>Meditation Pack</title>
 </head>
 <body>
-  
+  <main>
+    <section class="introduction">
+      <h1>descubra-se interiormente</h1>
+      <p>te ajudamos a reduzir seu <span>estresse</span>, <span>ansiedade</span> e <span>insônia</span></p>
+      <img src="assets/meditate.svg">
+    </section>
+    <section class="invite">
+      <h2>O início de uma nova jornada</h2>
+      <p>experimente nossa plataforma de forma gratuita por 30 dias.</p>
+      <button>COMECE</button>
+    </section>
+  </main>
+
 </body>
 </html>
